--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.12.0"
   }
 }
